// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace migration builder field actions test suite It should NOT build an update_field action for a field RELATION uncovered fields mutation 1`] = `[]`;

exports[`Workspace migration builder field actions test suite It should build a delete_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "defaultflatObjectMetadataNamePlural",
      "nameSingular": "defaultflatObjectMetadataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "object-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "delete_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field-metadata-unique-identifier-1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "defaultflatObjectMetadataNamePlural",
      "nameSingular": "defaultflatObjectMetadataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "object-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action for a RELATION field 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": Any<String>,
      "relationTargetObjectMetadataId": Any<String>,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "RELATION",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "RELATION",
          "uniqueIdentifier": "field-metadata-unique-identifier-1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "defaultflatObjectMetadataNamePlural",
      "nameSingular": "defaultflatObjectMetadataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "object-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "new description",
      "icon": "new icon",
      "id": Any<String>,
      "isActive": false,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "new name",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "new description",
          "icon": "new icon",
          "id": Any<String>,
          "isActive": false,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "new name",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field-metadata-unique-identifier-1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "defaultflatObjectMetadataNamePlural",
      "nameSingular": "defaultflatObjectMetadataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "object-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "update_field",
    "updates": [
      {
        "from": "default flat field metadata description",
        "property": "description",
        "to": "new description",
      },
      {
        "from": "icon",
        "property": "icon",
        "to": "new icon",
      },
      {
        "from": true,
        "property": "isActive",
        "to": false,
      },
      {
        "from": "flatFieldMetadataName",
        "property": "name",
        "to": "new name",
      },
    ],
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for a RELATION field 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "new description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": false,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "new label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": Any<String>,
      "relationTargetObjectMetadataId": Any<String>,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "RELATION",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "new description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": false,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "new label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "RELATION",
          "uniqueIdentifier": "field-metadata-unique-identifier-1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "defaultflatObjectMetadataNamePlural",
      "nameSingular": "defaultflatObjectMetadataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "object-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "update_field",
    "updates": [
      {
        "from": "default flat field metadata description",
        "property": "description",
        "to": "new description",
      },
      {
        "from": true,
        "property": "isActive",
        "to": false,
      },
      {
        "from": "flat field metadata label",
        "property": "label",
        "to": "new label",
      },
    ],
  },
]
`;

exports[`Workspace migration builder field actions test suite It should not infer any actions as from and to fields are identical 1`] = `[]`;

exports[`Workspace migration builder index actions test suite It should build a delete_index action 1`] = `
[
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "delete_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an create_index action 1`] = `
[
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an delete_index and a create_index action ( the way we handle update ) 1`] = `
[
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "delete_index",
  },
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": "new index where clause",
      "isCustom": false,
      "isUnique": false,
      "name": "new index name",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should not infer any actions as from and to indexes are identical 1`] = `[]`;

exports[`Workspace migration builder object actions test suite It should build a create_object action 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a create_object and create_field actions for each of this fieldMetadata 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field_0",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field_1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field_2",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field_3",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "description": "default flat field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadataId": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "field_4",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_0",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_1",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_2",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_3",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        {
          "createdAt": Any<ClockDate>,
          "description": "default flat field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flat field metadata label",
          "name": "flatFieldMetadataName",
          "objectMetadataId": Any<String>,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadataId": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "field_4",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "delete_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object action with all object updated fields 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flat object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flat object metadata label plural",
      "labelSingular": "default flat object metadata label singular",
      "namePlural": "prastoins",
      "nameSingular": "prastouin",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "update_object",
    "updates": [
      {
        "from": true,
        "property": "isLabelSyncedWithName",
        "to": false,
      },
      {
        "from": "totos",
        "property": "namePlural",
        "to": "prastoins",
      },
      {
        "from": "toto",
        "property": "nameSingular",
        "to": "prastouin",
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should not infer any actions as from and to are identical 1`] = `[]`;
